⚙️️ Configure swagger UI

--- a/InTechNet.Api/InTechNet.Api/Properties/launchSettings.json
+++ b/InTechNet.Api/InTechNet.Api/Properties/launchSettings.json
@@ -11,8 +11,8 @@
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "commandLineArgs": "--urls=http://localhost:5001/",
       "launchBrowser": true,
+      "launchUrl": "swagger/index.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
