:seedling: Create code first model

--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "InTechNetDatabase": "Host=localhost;Database=InTechNetTest;Username=postgres;Password=root"
+  },
   "Project": {
     "Contact": {
       "Email": "",
