🐛 📚 fixed model and wrote documentation for entities

--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "InTechNetDatabase": "Host=localhost;Database=InTechNetTest;Username=postgres;Password=root"
+    "InTechNetDatabase": "Host=localhost;Database=InTechNet_dev;Username=postgres;Password=root"
   },
   "Project": {
     "Contact": {
