--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Custom files
+*.rsa
+
 
 # Created by https://www.gitignore.io/api/csharp,dotnetcore,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=csharp,dotnetcore,visualstudio,visualstudiocode
