--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "InTechNetDatabase": "Host=localhost;Database=InTechNet_dev;Username=postgres;Password=root"
+    "InTechNetDatabase": "Host=localhost;Database=InTechNet_dev;Username=postgres;Password=root",
+    "InTechNetAuthenticationDatabase": "Host=localhost;Database=InTechNetAuth_dev;Username=postgres;Password=root"
   },
   "Project": {
     "Contact": {
