--- a/InTechNet.Api/InTechNet.Api/InTechNet.Api.csproj
+++ b/InTechNet.Api/InTechNet.Api/InTechNet.Api.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
     <ProjectReference Include="..\InTechNet.DataAccessLayer\InTechNet.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\InTechNet.Service.Authentication\InTechNet.Service.Authentication.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
