--- a/InTechNet.Api/InTechNet.Common/InTechNet.Common.csproj
+++ b/InTechNet.Api/InTechNet.Common/InTechNet.Common.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InTechNet.Service.Authentication\InTechNet.Service.Authentication.csproj" />
+  </ItemGroup>
+
 </Project>
