--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -3,6 +3,13 @@
     "InTechNetDatabase": "Host=localhost;Database=InTechNet_dev;Username=postgres;Password=root",
     "InTechNetAuthenticationDatabase": "Host=localhost;Database=InTechNetAuth_dev;Username=postgres;Password=root"
   },
+
+  "JwtToken": {
+    "SecretKey": "InTechNetSuperSecretKey",
+    "Issuer": "https://localhost:8080",
+    "Audience": "https://localhost:8080"
+  },
+
   "Project": {
     "Contact": {
       "Email": "",
@@ -17,6 +24,7 @@
     "Title": "InTechNet API v1",
     "Version": "1.0.0"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -24,5 +32,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*"
 }
