--- a/InTechNet.Api/InTechNet.DataAccessLayer/InTechNet.DataAccessLayer.csproj
+++ b/InTechNet.Api/InTechNet.DataAccessLayer/InTechNet.DataAccessLayer.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.4.0" />
     <PackageReference Include="IdentityServer4" Version="3.1.2" />
     <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="3.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2" />
