⚙️Update databases names

--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "InTechNetDatabase": "Host=localhost;Database=InTechNet_dev;Username=postgres;Password=root",
-    "InTechNetAuthenticationDatabase": "Host=localhost;Database=InTechNetAuth_dev;Username=postgres;Password=root"
+    "InTechNetDatabase": "Host=localhost;Database=InTechNet;Username=postgres;Password=root",
+    "InTechNetAuthenticationDatabase": "Host=localhost;Database=InTechNetAuth;Username=postgres;Password=root"
   },
 
   "JwtToken": {
