--- a/InTechNet.Api/InTechNet.Api/appsettings.Development.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.Development.json
@@ -1,4 +1,9 @@
 {
+  "ConnectionStrings": {
+    "InTechNetDatabase": "Host=localhost;Database=InTechNet;Username=postgres;Password=root",
+    "InTechNetAuthenticationDatabase": "Host=localhost;Database=InTechNetAuth;Username=postgres;Password=root"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
