--- a/InTechNet.Api/InTechNet.Service.Authentication/InTechNet.Service.Authentication.csproj
+++ b/InTechNet.Api/InTechNet.Service.Authentication/InTechNet.Service.Authentication.csproj
@@ -5,7 +5,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
   </ItemGroup>
 
 </Project>
