--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -7,7 +7,8 @@
   "JwtToken": {
     "SecretKey": "InTechNetSuperSecretKey",
     "Issuer": "https://localhost:8080",
-    "Audience": "https://localhost:8080"
+    "Audience": "https://localhost:8080",
+    "ValidityTimespanInHours":  12 
   },
 
   "Project": {
