✨ Add InTechNet custom exceptions

--- a/InTechNet.Api/InTechNet.Service.User/InTechNet.Service.User.csproj
+++ b/InTechNet.Api/InTechNet.Service.User/InTechNet.Service.User.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
     <ProjectReference Include="..\InTechNet.DataAccessLayer\InTechNet.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\InTechNet.Exception\InTechNet.Exception.csproj" />
   </ItemGroup>
 
 </Project>
