🚧 Fix error on JWT creation for moderators

--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -5,10 +5,10 @@
   },
 
   "JwtToken": {
-    "SecretKey": "InTechNetSuperSecretKey",
+    "SecretKey": "InTechNetSuperSecretKeyForJWTWebTokenGenerationPurposes",
     "Issuer": "https://localhost:8080",
     "Audience": "https://localhost:8080",
-    "ValidityTimespanInHours":  12 
+    "ValidityTimespanInHours": 12
   },
 
   "Project": {
