--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -5,7 +5,7 @@
   },
 
   "JwtToken": {
-    "SecretKey": "InTechNetSuperSecretKey",
+    "SecretKey": "InTechNetSuperSecretKeyForJWTWebTokenGenerationPurposes",
     "Issuer": "https://localhost:8080",
     "Audience": "https://localhost:8080",
     "ValidityTimespanInHours":  12 
