✨ Add JWT Authentication
* ⚙️ Add .rsa to gitignore

* 🌱 Add IdentityServer with PostgreSQL persistence

* 🚧 WiP login endpoint

* ✨ Split login endpoints between pupil and moderator

* 🗑 Remove outdated test endpoint

* 🚧 WiP Add jwt token auth

* ⚙️Update databases names

* ✨Create authentication services

* 🚧 Create authentication services for JWT generation

* ✨ AuthenticationService now verify tokens

* 🚧 WiP Bearer authentication in Swagger

* 📚 Split logic for the moderator and pupil token generation

* 🐛 Fix authorize mismatching parameter

* 🚧 Remove unused Ensure() method for JWT

Co-authored-by: bulledemousse2@hotmail.fr <bulledemousse2@hotmail.fr>

* 🎯 Moved JWT constants in JWT helper

* 🐛 Fix CI

* 🚧 WiP ModeratorService

* ✨ Moderator credentials verifications

* ✨ Add UserService to git

* ✨ Add InTechNet custom exceptions

* 🐛 Add renamed BaseException

* 🐛 Fix moderator lookup on login

* 🐛 Fix moderator lookup on login

* 🚧 Add migration

* 🚧 Fix error on JWT creation for moderators

* 🐛 Fix swagger authentication

* ✨Add UserService

* ✨ Add Role based attributes

* 🎯 Code cleanup and documentation enhancement

Co-authored-by: Raphael Clarisse <raphael.clarisse21@gmail.com>
Co-authored-by: bulledemousse2@hotmail.fr <bulledemousse2@hotmail.fr>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#Custom files
+*.rsa
+
 
 # Created by https://www.gitignore.io/api/csharp,dotnetcore,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=csharp,dotnetcore,visualstudio,visualstudiocode
@@ -11,7 +14,6 @@
 # User-specific files
 *.rsuser
 *.suo
-*.user
 *.userosscache
 *.sln.docstates
 
