--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -1,7 +1,16 @@
 {
   "ConnectionStrings": {
-    "InTechNetDatabase": "Host=localhost;Database=InTechNet_dev;Username=postgres;Password=root"
+    "InTechNetDatabase": "Host=localhost;Database=InTechNet;Username=postgres;Password=root",
+    "InTechNetAuthenticationDatabase": "Host=localhost;Database=InTechNetAuth;Username=postgres;Password=root"
   },
+
+  "JwtToken": {
+    "SecretKey": "InTechNetSuperSecretKeyForJWTWebTokenGenerationPurposes",
+    "Issuer": "https://localhost:8080",
+    "Audience": "https://localhost:8080",
+    "ValidityTimespanInHours": 12
+  },
+
   "Project": {
     "Contact": {
       "Email": "",
@@ -16,6 +25,7 @@
     "Title": "InTechNet API v1",
     "Version": "1.0.0"
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -23,5 +33,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*"
 }
