--- a/InTechNet.Api/InTechNet.Common/InTechNet.Common.csproj
+++ b/InTechNet.Api/InTechNet.Common/InTechNet.Common.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.6.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
   </ItemGroup>
 
