--- a/InTechNet.Api/InTechNet.Common/InTechNet.Common.csproj
+++ b/InTechNet.Api/InTechNet.Common/InTechNet.Common.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InTechNet.DataAccessLayer\InTechNet.DataAccessLayer.csproj" />
+  </ItemGroup>
+
 </Project>
