✨ Add billing architecture

--- a/InTechNet.Api/InTechNet.Api/InTechNet.Api.csproj
+++ b/InTechNet.Api/InTechNet.Api/InTechNet.Api.csproj
@@ -29,6 +29,7 @@
     <ProjectReference Include="..\InTechNet.DataAccessLayer\InTechNet.DataAccessLayer.csproj" />
     <ProjectReference Include="..\InTechNet.Hub\InTechNet.Service.Hub.csproj" />
     <ProjectReference Include="..\InTechNet.Service.Authentication\InTechNet.Service.Authentication.csproj" />
+    <ProjectReference Include="..\InTechNet.Service.Subscription\InTechNet.Service.Subscription.csproj" />
     <ProjectReference Include="..\InTechNet.Service.User\InTechNet.Service.User.csproj" />
   </ItemGroup>
 
