✨ Automaticly add subscription plans on db creating

--- a/InTechNet.Api/InTechNet.DataAccessLayer/InTechNet.DataAccessLayer.csproj
+++ b/InTechNet.Api/InTechNet.DataAccessLayer/InTechNet.DataAccessLayer.csproj
@@ -27,4 +27,8 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
+  </ItemGroup>
+
 </Project>
