--- a/InTechNet.Api/InTechNet.DataAccessLayer/InTechNet.DataAccessLayer.csproj
+++ b/InTechNet.Api/InTechNet.DataAccessLayer/InTechNet.DataAccessLayer.csproj
@@ -5,11 +5,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Migrations\20200315130541_InitialDataSchemeWithIndexesMigration.cs" />
-    <Compile Remove="Migrations\20200315130541_InitialDataSchemeWithIndexesMigration.Designer.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.0" />
     <PackageReference Include="IdentityServer4" Version="3.1.2" />
     <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="3.1.2" />
@@ -19,6 +14,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
   </ItemGroup>
 
 </Project>
