--- a/InTechNet.Api/InTechNet.Api/InTechNet.Api.csproj
+++ b/InTechNet.Api/InTechNet.Api/InTechNet.Api.csproj
@@ -27,10 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
     <ProjectReference Include="..\InTechNet.DataAccessLayer\InTechNet.DataAccessLayer.csproj" />
-    <ProjectReference Include="..\InTechNet.Hub\InTechNet.Service.Hub.csproj" />
-    <ProjectReference Include="..\InTechNet.Service.Authentication\InTechNet.Service.Authentication.csproj" />
-    <ProjectReference Include="..\InTechNet.Service.Subscription\InTechNet.Service.Subscription.csproj" />
-    <ProjectReference Include="..\InTechNet.Service.User\InTechNet.Service.User.csproj" />
+    <ProjectReference Include="..\InTechNet.Service\InTechNet.Services.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
