--- a/InTechNet.Api/InTechNet.Api/appsettings.Development.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.Development.json
@@ -3,6 +3,13 @@
     "InTechNetDatabase": "Host=localhost;Database=InTechNet;Username=postgres;Password=root"
   },
 
+  "JwtToken": {
+    "SecretKey": "InTechNetDevSuperSecretKeyForJWTWebTokenGenerationPurposes",
+    "Issuer": "https://localhost:8080",
+    "Audience": "https://localhost:8080",
+    "ValidityTimespanInHours": 12
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
