🐛 Fix Swagger generation

--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -5,15 +5,15 @@
 
   "JwtToken": {
     "SecretKey": "InTechNetSuperSecretKeyForJWTWebTokenGenerationPurposes",
-    "Issuer": "https://193.50.40.81:5000",
-    "Audience": "https://193.50.40.81:5000",
+    "Issuer": "http://193.50.40.81:5000",
+    "Audience": "http://193.50.40.81:5000",
     "ValidityTimespanInHours": 12
   },
 
   "Project": {
     "Contact": {
-      "Email": "",
-      "Name": "[Cast ||] Pierre Bouillon & Raphael Clarisse"
+      "Name": "Pierre Bouillon & Raphael Clarisse",
+      "Url": "http://193.50.40.81:4200"
     },
     "Description": "InTechNet REST API",
     "Title": "InTechNet API v1",
