--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -5,22 +5,17 @@
 
   "JwtToken": {
     "SecretKey": "InTechNetSuperSecretKeyForJWTWebTokenGenerationPurposes",
-    "Issuer": "https://localhost:8080",
-    "Audience": "https://localhost:8080",
+    "Issuer": "http://193.50.40.81:5000",
+    "Audience": "http://193.50.40.81:5000",
     "ValidityTimespanInHours": 12
   },
 
   "Project": {
     "Contact": {
-      "Email": "",
-      "Name": "[Cast ||] Pierre Bouillon & Raphael Clarisse",
-      "Url": "https://github.com/cast-or-dam"
+      "Name": "Pierre Bouillon & Raphael Clarisse",
+      "Url": "http://193.50.40.81:4200"
     },
     "Description": "InTechNet REST API",
-    "License": {
-      "Name": "Use under MIT",
-      "Url": "https://github.com/cast-or-dam/InTechNet.Api/blob/master/LICENSE"
-    },
     "Title": "InTechNet API v1",
     "Version": "1.0.0"
   },
