--- a/InTechNet.Api/InTechNet.UnitTests/InTechNet.UnitTests.csproj
+++ b/InTechNet.Api/InTechNet.UnitTests/InTechNet.UnitTests.csproj
@@ -10,7 +10,9 @@
     <PackageReference Include="AutoFixture" Version="4.11.0" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
+    <PackageReference Include="Xbehave" Version="2.4.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1">
       <PrivateAssets>all</PrivateAssets>
@@ -20,6 +22,13 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\InTechNet.Common\InTechNet.Common.csproj" />
+    <ProjectReference Include="..\InTechNet.DataAccessLayer\InTechNet.DataAccessLayer.csproj" />
+    <ProjectReference Include="..\InTechNet.Exception\InTechNet.Exception.csproj" />
+    <ProjectReference Include="..\InTechNet.Service\InTechNet.Services.csproj" />
   </ItemGroup>
 
 </Project>
