Revert "✅ 71 add unit tests (#72)"
This reverts commit 13840c852fe6b97e368b87f391543d28c4a187bb.

--- a/InTechNet.Api/InTechNet.Api/appsettings.json
+++ b/InTechNet.Api/InTechNet.Api/appsettings.json
@@ -5,17 +5,22 @@
 
   "JwtToken": {
     "SecretKey": "InTechNetSuperSecretKeyForJWTWebTokenGenerationPurposes",
-    "Issuer": "http://193.50.40.81:5000",
-    "Audience": "http://193.50.40.81:5000",
+    "Issuer": "https://localhost:8080",
+    "Audience": "https://localhost:8080",
     "ValidityTimespanInHours": 12
   },
 
   "Project": {
     "Contact": {
-      "Name": "Pierre Bouillon & Raphael Clarisse",
-      "Url": "http://193.50.40.81:4200"
+      "Email": "",
+      "Name": "[Cast ||] Pierre Bouillon & Raphael Clarisse",
+      "Url": "https://github.com/cast-or-dam"
     },
     "Description": "InTechNet REST API",
+    "License": {
+      "Name": "Use under MIT",
+      "Url": "https://github.com/cast-or-dam/InTechNet.Api/blob/master/LICENSE"
+    },
     "Title": "InTechNet API v1",
     "Version": "1.0.0"
   },
